Enable java agent loading dynamically
When running JMRI tests on Java 25, a warning is given:
"A Java agent has been loaded dynamically"

This commit enables dynamic loading of Java agents. This is used for Mockito that dynamically loads ByteBuddy.

See these links:

https://stackoverflow.com/questions/77951485/getting-a-java-agent-has-been-loaded-dynamically-warning-in-intellij-after-upg

https://github.com/mockito/mockito/issues/3037